# cherenkov

./: .gitignore  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  lefthook.yml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: Cargo.toml  README.md
benches/benches/: hub_pubsub.rs  protocol_codec.rs  schema_validate.rs
crates/cherenkov/: Cargo.toml
crates/cherenkov-admin/: Cargo.toml
crates/cherenkov-admin/src/: console.html  lib.rs
crates/cherenkov-auth/: Cargo.toml
crates/cherenkov-auth/src/: jwt.rs  lib.rs  namespace_acl.rs
crates/cherenkov-broker/: Cargo.toml
crates/cherenkov-broker-nats/: Cargo.toml
crates/cherenkov-broker-nats/src/: lib.rs
crates/cherenkov-broker-redis/: Cargo.toml
crates/cherenkov-broker-redis/src/: lib.rs
crates/cherenkov-broker/src/: lib.rs
crates/cherenkov-channel-crdt/: Cargo.toml
crates/cherenkov-channel-crdt/src/: automerge.rs  lib.rs  yjs.rs
crates/cherenkov-channel-pubsub/: Cargo.toml
crates/cherenkov-channel-pubsub/src/: lib.rs
crates/cherenkov-core/: Cargo.toml
crates/cherenkov-core/src/: acl.rs  auth.rs  broker.rs  channel.rs  error.rs  hub.rs  lib.rs  schema.rs  session.rs  transport.rs
crates/cherenkov-protocol/: Cargo.toml  build.rs
crates/cherenkov-protocol/proto/: v1.proto
crates/cherenkov-protocol/src/: frame.rs  lib.rs
crates/cherenkov-protocol/src/snapshots/: cherenkov_protocol__frame__tests__connect.snap  cherenkov_protocol__frame__tests__connect_ok.snap  cherenkov_protocol__frame__tests__error.snap  cherenkov_protocol__frame__tests__publication.snap  cherenkov_protocol__frame__tests__publish.snap  cherenkov_protocol__frame__tests__subscribe.snap
crates/cherenkov-schema/: Cargo.toml
crates/cherenkov-schema/src/: lib.rs  registry.rs
crates/cherenkov-sdk-ts/: Cargo.toml
crates/cherenkov-sdk-ts/src/: asyncapi.rs  main.rs  tsgen.rs
crates/cherenkov-server/: Cargo.toml
crates/cherenkov-server/src/: app.rs  config.rs  lib.rs  main.rs
crates/cherenkov-server/tests/: admin.rs  auth.rs  crdt_yjs.rs  echo.rs  recovery.rs  schema_validation.rs  sse.rs
crates/cherenkov-test-support/: Cargo.toml
crates/cherenkov-test-support/src/: lib.rs
crates/cherenkov-transport-sse/: Cargo.toml
crates/cherenkov-transport-sse/src/: lib.rs
crates/cherenkov-transport-ws/: Cargo.toml
crates/cherenkov-transport-ws/src/: lib.rs
crates/cherenkov-transport-wt/: Cargo.toml
crates/cherenkov-transport-wt/src/: lib.rs
crates/cherenkov/src/: lib.rs
docs/: architecture.md  plan.md
docs/adr/: 0001-pluggable-architecture.md  0002-broker-crate-boundary.md  0003-schema-as-contract.md  0004-auth-and-acl.md  README.md
examples/echo/: README.md  client.html  config.yaml  index.html
examples/live-cursors/: README.md  config.yaml  index.html
examples/price-feed/: README.md  config.yaml  index.html
openspec/changes/archive/2026-05-09-auth-jwt-acl/: proposal.md  tasks.md
openspec/changes/archive/2026-05-09-auth-jwt-acl/specs/acl-trait/: spec.md
openspec/changes/archive/2026-05-09-auth-jwt-acl/specs/auth-trait/: spec.md
openspec/changes/archive/2026-05-09-auth-jwt-acl/specs/hub-core/: spec.md
openspec/changes/archive/2026-05-09-auth-jwt-acl/specs/jwt-authenticator/: spec.md
openspec/changes/archive/2026-05-09-auth-jwt-acl/specs/namespace-acl/: spec.md
openspec/changes/archive/2026-05-09-auth-jwt-acl/specs/server-binary/: spec.md
openspec/changes/archive/2026-05-09-auth-jwt-acl/specs/wire-protocol/: spec.md
openspec/changes/archive/2026-05-09-auth-jwt-acl/specs/ws-transport/: spec.md
openspec/changes/archive/2026-05-09-bootstrap-foundation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-bootstrap-foundation/specs/hub-core/: spec.md
openspec/changes/archive/2026-05-09-bootstrap-foundation/specs/memory-broker/: spec.md
openspec/changes/archive/2026-05-09-bootstrap-foundation/specs/pubsub-channel/: spec.md
openspec/changes/archive/2026-05-09-bootstrap-foundation/specs/server-binary/: spec.md
openspec/changes/archive/2026-05-09-bootstrap-foundation/specs/wire-protocol/: spec.md
openspec/changes/archive/2026-05-09-bootstrap-foundation/specs/workspace-bootstrap/: spec.md
openspec/changes/archive/2026-05-09-bootstrap-foundation/specs/ws-transport/: spec.md
openspec/changes/archive/2026-05-09-crdt-channels/: proposal.md  tasks.md
openspec/changes/archive/2026-05-09-crdt-channels/specs/crdt-channel-automerge/: spec.md
openspec/changes/archive/2026-05-09-crdt-channels/specs/crdt-channel-yjs/: spec.md
openspec/changes/archive/2026-05-09-crdt-channels/specs/hub-multi-kind/: spec.md
openspec/changes/archive/2026-05-09-crdt-channels/specs/server-channel-kinds/: spec.md
openspec/changes/archive/2026-05-09-schema-validation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-09-schema-validation/specs/hub-core-validation/: spec.md
openspec/changes/archive/2026-05-09-schema-validation/specs/schema-registry/: spec.md
openspec/changes/archive/2026-05-09-schema-validation/specs/server-namespaces/: spec.md
openspec/specs/acl-trait/: spec.md
openspec/specs/auth-trait/: spec.md
openspec/specs/crdt-channel-automerge/: spec.md
openspec/specs/crdt-channel-yjs/: spec.md
openspec/specs/hub-core/: spec.md
openspec/specs/hub-core-validation/: spec.md
openspec/specs/hub-multi-kind/: spec.md
openspec/specs/jwt-authenticator/: spec.md
openspec/specs/memory-broker/: spec.md
openspec/specs/namespace-acl/: spec.md
openspec/specs/pubsub-channel/: spec.md
openspec/specs/schema-registry/: spec.md
openspec/specs/server-binary/: spec.md
openspec/specs/server-channel-kinds/: spec.md
openspec/specs/server-namespaces/: spec.md
openspec/specs/wire-protocol/: spec.md
openspec/specs/workspace-bootstrap/: spec.md
openspec/specs/ws-transport/: spec.md
