[package]
name = "cherenkov-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Admin HTTP API and basic embedded UI for Cherenkov."

[dependencies]
cherenkov-core.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
metrics-exporter-prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
cherenkov-broker.workspace = true
cherenkov-channel-pubsub.workspace = true

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
