[package]
name = "cherenkov-broker-nats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "NATS-backed broker for Cherenkov."

[dependencies]
cherenkov-core.workspace = true
cherenkov-protocol.workspace = true
async-nats.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
