[package]
name = "cherenkov-broker-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Redis-backed broker for Cherenkov."

[dependencies]
cherenkov-core.workspace = true
cherenkov-protocol.workspace = true
async-trait.workspace = true
bytes.workspace = true
fred.workspace = true
futures.workspace = true
prost.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
tracing.workspace = true

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
