[package]
name = "cherenkov-channel-pubsub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Plain publish/subscribe channel kind for Cherenkov, with bounded in-memory history."

[dependencies]
cherenkov-core.workspace = true
cherenkov-protocol.workspace = true
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tokio-test.workspace = true

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
