[package]
name = "cherenkov-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wire protocol (v1) for Cherenkov: Protobuf schema, generated types, and ergonomic Rust wrappers."

[dependencies]
bytes.workspace = true
prost.workspace = true
thiserror.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
