[package]
name = "cherenkov-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Schema registry and JSON-Schema / Protobuf validation for Cherenkov."

[dependencies]
cherenkov-core.workspace = true
async-trait.workspace = true
bytes.workspace = true
jsonschema.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test.workspace = true

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
