[package]
name = "cherenkov-sdk-ts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "TypeScript SDK + AsyncAPI generator CLI for Cherenkov."

[[bin]]
name = "cherenkov-sdk-ts"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
