[package]
name = "cherenkov-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared test fixtures and helpers for Cherenkov; gated behind the `test-support` feature."
publish = false

[features]
default = []
test-support = []

[dependencies]

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
