[package]
name = "cherenkov-transport-ws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebSocket transport for Cherenkov, satisfying cherenkov-core's Transport trait via axum."

[dependencies]
cherenkov-core.workspace = true
cherenkov-protocol.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true }
tracing.workspace = true

[lints.rust]
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
